# ctc-forced-aligner

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  align.py  alignment_helpers.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: CI.yml  build_package.yml  test_build.yml  test_build_ubuntu.yml
ctc_forced_aligner/: __init__.py  align.py  alignment_helpers.py  alignment_utils.py  forced_align_impl.cpp  norm_config.py  punctuations.lst  text_utils.py
tests/: test_alignment.py  test_emissions.py
