[build-system]
requires = ["setuptools>=42", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "ctc-forced-aligner"
description = "Text to speech alignment using CTC forced alignment"
license = { text = "CC-BY-NC 4.0" }
authors = [
  {name = "Mahmoud Ashraf", email = "hassouna97.ma@gmail.com"},]
dynamic = ["version", "dependencies"]
requires-python = ">= 3.9"

[tool.setuptools.dynamic]
version = {attr = "ctc_forced_aligner.__version__"}
dependencies = {file = ["requirements.txt"]}

[project.urls]
repository = "https://github.com/MahmoudAshraf97/ctc-forced-aligner"

[project.scripts]
ctc-forced-aligner = "ctc_forced_aligner.align:cli"

[tool.setuptools.package-data]
"*" = [
    "punctuations.lst",
    "uroman/bin/**/*.*",
    "uroman/data/**/*.*",
    "uroman/lib/**/*.*",
]