[build-system]
requires = ["setuptools>=42", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "ctc-forced-aligner"
description = "Text to speech alignment using CTC forced alignment"
license = { text = "CC-BY-NC 4.0" }
authors = [
  {name = "Mahmoud Ashraf", email = "hassouna97.ma@gmail.com"},]
dynamic = ["version", "dependencies"]
requires-python = ">= 3.10"

[tool.setuptools.dynamic]
version = {attr = "ctc_forced_aligner.__version__"}
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = ["black==23.*", "flake8==7.*", "flake8-pyproject==1.*", "isort==5.*", "pytest==7.*"]

[project.urls]
repository = "https://github.com/MahmoudAshraf97/ctc-forced-aligner"

[project.scripts]
ctc-forced-aligner = "ctc_forced_aligner.align:cli"

[tool.setuptools.package-data]
"*" = [
    "punctuations.lst",
]

[tool.flake8]
max-line-length = 100
ignore = ["E203", "W503"]

[tool.isort]
profile = "black"
lines_between_types = 1
